.provarCaches/00D6C0000000xA6UAI/objects/sked__Resource_Shift_Break__c.object
<CustomObject>
    <description>A break taken during a shift by a resource.</description>
    <fields>
        <fullName>sked__End__c</fullName>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked__Resource_Shift__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Resource Shift</label>
        <referenceTo>sked__Resource_Shift__c</referenceTo>
        <relationshipLabel>Resource Shift Breaks</relationshipLabel>
        <relationshipName>Resource_Shift_Breaks</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__Start__c</fullName>
        <label>Start</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Resource Shift Break</label>
    <nameField>
        <displayFormat>RSB-{0000}</displayFormat>
        <label>Resource Shift Break Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Shift Breaks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>